_Source/force-app/main/default/objects/Opportunity/fields/BI_Routes_Added__c.field-meta.xml
<CustomField>
    <fullName>BI_Routes_Added__c</fullName>
    <inlineHelpText>Field is used as a placeholder to get routes added. Added routes are displayed via the Supported Route field as a formula so ensure supported routes are only added via the button and create opportunity screen does not prompt for route info</inlineHelpText>
    <label>Routes Added</label>
    <type>TextArea</type>
</CustomField>