_Source/force-app/main/default/objects/Opportunity/fields/BI_Sales_Channels__c.field-meta.xml
<CustomField>
    <fullName>BI_Sales_Channels__c</fullName>
    <inlineHelpText>Sales Channel is to be selected for all APAC, EMEAI and LATIN agency actions only</inlineHelpText>
    <label>Sales Channel(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Cross Channel</fullName>
            </value>
            <value>
                <fullName>Global TMC</fullName>
            </value>
            <value>
                <fullName>Leisure / Specialty</fullName>
            </value>
            <value>
                <fullName>Local TMC</fullName>
            </value>
            <value>
                <fullName>OTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>