_Source/force-app/main/default/objects/Opportunity/fields/BI_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>BI_Sales_Organization__c</fullName>
    <inlineHelpText>Indicates the Sales Organization (i.e. North America, Latin America, APAC, EMEAI)  of the Opportunity owner. This field will be automatically completed once the opportunity is saved. You have the option to edit value if needed</inlineHelpText>
    <label>Sales Organization</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Organization</valueSetName>
    </valueSet>
</CustomField>