_Source/force-app/main/default/objects/Opportunity/fields/BI_Secondary_Opportunity_Inbox_Email__c.field-meta.xml
<CustomField>
    <fullName>BI_Secondary_Opportunity_Inbox_Email__c</fullName>
    <label>Secondary Opportunity Inbox Email</label>
    <type>Email</type>
</CustomField>