_Source/force-app/main/default/objects/Opportunity/fields/BI_Show_or_Hide_Flow__c.field-meta.xml
<CustomField>
    <fullName>BI_Show_or_Hide_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show or Hide Flow</label>
    <type>Checkbox</type>
</CustomField>