_Source/force-app/main/default/objects/Opportunity/fields/BI_SPOTLIGHT_THIS_OPPORTUNITY__c.field-meta.xml
<CustomField>
    <fullName>BI_SPOTLIGHT_THIS_OPPORTUNITY__c</fullName>
    <defaultValue>&apos;Select an option below to include in Key Activity &amp; Accomplishments Reports / Dashboards. (Standard pipeline reporting will still incl. your opportunity, even with no selection made)&apos;</defaultValue>
    <label>SPOTLIGHT THIS OPPORTUNITY?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>