_Source/force-app/main/default/objects/Opportunity/fields/BI_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Start_Date__c</fullName>
    <inlineHelpText>Contract / Tactical / Amendment Start Date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>