_Source/force-app/main/default/objects/Opportunity/fields/BI_Strategy__c.field-meta.xml
<CustomField>
    <fullName>BI_Strategy__c</fullName>
    <inlineHelpText>Select your primary strategy / reason for doing this tactical</inlineHelpText>
    <label>Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gain / Defend Revenue/Market Share</fullName>
            </value>
            <value>
                <fullName>Gain Loyalty</fullName>
            </value>
            <value>
                <fullName>Drive Awareness</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>