_Source/force-app/main/default/objects/Opportunity/fields/BI_Strategy_Description__c.field-meta.xml
<CustomField>
    <fullName>BI_Strategy_Description__c</fullName>
    <label>Strategy Description</label>
    <type>TextArea</type>
</CustomField>