_Source/force-app/main/default/objects/Opportunity/fields/BI_Supported_Route_s__c.field-meta.xml
<CustomField>
    <fullName>BI_Supported_Route_s__c</fullName>
    <formula>BI_Routes_Added__c</formula>
    <inlineHelpText>Denotes one or multiple specific routes that this tactical supports. Use the &apos;Add Routes that this Tactical Supports&apos; button to add a route. Routes can only be added while the opportunity is open.</inlineHelpText>
    <label>Supported Route(s)</label>
    <type>Text</type>
</CustomField>