_Source/force-app/main/default/objects/Opportunity/fields/BI_Tactical_Request_Form_Attached__c.field-meta.xml
<CustomField>
    <fullName>BI_Tactical_Request_Form_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please ensure the Tactical Request form is attached before checking the box</inlineHelpText>
    <label>Tactical Request Form Attached</label>
    <type>Checkbox</type>
</CustomField>