_Source/force-app/main/default/objects/Opportunity/fields/BI_Tactical_Request_Form_URL__c.field-meta.xml
<CustomField>
    <fullName>BI_Tactical_Request_Form_URL__c</fullName>
    <defaultValue>&quot;https://team.ual.com/collab/sis_helpdesk/FTDownloads/Information Systems/BusinessInsight&quot;</defaultValue>
    <label>Tactical Request Form URL</label>
    <type>Url</type>
</CustomField>