_Source/force-app/main/default/objects/Opportunity/fields/BI_TMC_Data_Available__c.field-meta.xml
<CustomField>
    <fullName>BI_TMC_Data_Available__c</fullName>
    <label>TMC Data Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>