_Source/force-app/main/default/objects/Opportunity/fields/BI_Travel_Agency_Request_Form__c.field-meta.xml
<CustomField>
    <fullName>BI_Travel_Agency_Request_Form__c</fullName>
    <defaultValue>&quot;https://team.ual.com/collab/sis_helpdesk/FTDownloads/Information Systems/BusinessInsight&quot;</defaultValue>
    <description>&quot;https:\\team.ual.com\collab\sis_helpdesk\FTDownloads\Information%20Systems\BusinessInsight&quot;</description>
    <label>Travel Agency Request Form</label>
    <type>Url</type>
</CustomField>