_Source/force-app/main/default/objects/Opportunity/fields/BI_Travel_Agency_Request_Form_Attached__c.field-meta.xml
<CustomField>
    <fullName>BI_Travel_Agency_Request_Form_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Travel Agency Request Form Attached</label>
    <type>Checkbox</type>
</CustomField>