_Source/force-app/main/default/objects/Opportunity/fields/BI_Traveler_Amenities__c.field-meta.xml
<CustomField>
    <fullName>BI_Traveler_Amenities__c</fullName>
    <label>Traveler Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drink Coupons</fullName>
            </value>
            <value>
                <fullName>Economy Plus</fullName>
            </value>
            <value>
                <fullName>ER Certificates</fullName>
            </value>
            <value>
                <fullName>Event Tickets</fullName>
            </value>
            <value>
                <fullName>MileagePlus – Bonus Miles</fullName>
            </value>
            <value>
                <fullName>MileagePlus – Global Services status</fullName>
            </value>
            <value>
                <fullName>MileagePlus – Status (except GS)</fullName>
            </value>
            <value>
                <fullName>MileagePlus – Target Demand Generation (TDG)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Service Funds</fullName>
            </value>
            <value>
                <fullName>United Club Membership</fullName>
            </value>
            <value>
                <fullName>United Club Passes</fullName>
            </value>
            <value>
                <fullName>Upgrades</fullName>
            </value>
            <value>
                <fullName>Global Services</fullName>
                <isActive>false</isActive>
                <label>Global Services</label>
            </value>
            <value>
                <fullName>Mileage Status</fullName>
                <isActive>false</isActive>
                <label>Mileage Status</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>