_Source/force-app/main/default/objects/Opportunity/fields/BI_UCS_Data_Flow__c.field-meta.xml
<CustomField>
    <fullName>BI_UCS_Data_Flow__c</fullName>
    <label>UCS Data Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>