_Source/force-app/main/default/objects/Opportunity/fields/BI_US_CA_Annual_Contracted_Sales_Rev_UA__c.field-meta.xml
<CustomField>
    <fullName>BI_US_CA_Annual_Contracted_Sales_Rev_UA__c</fullName>
    <label>US/CA Annual Contracted Sales / Rev - UA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>