_Source/force-app/main/default/objects/Opportunity/fields/Particpating_Star_Carriers__c.field-meta.xml
<CustomField>
    <fullName>Particpating_Star_Carriers__c</fullName>
    <label>Participating Star Carriers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Star_Alliance_Carriers</valueSetName>
    </valueSet>
</CustomField>