_Source/force-app/main/default/objects/Opportunity/fields/SIP_Company_Registered_From__c.field-meta.xml
<CustomField>
    <fullName>SIP_Company_Registered_From__c</fullName>
    <label>Company Registered From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>