_Source/force-app/main/default/objects/Opportunity/recordTypes/BI_Corporate.recordType-meta.xml
<RecordType>
    <fullName>BI_Corporate</fullName>
    <active>true</active>
    <businessProcess>BI - Corporate Contract</businessProcess>
    <description>Create a corporate contract Opportunity (New Acquisition/Renewal/Amendment)</description>
    <label>Corporate Contract</label>
</RecordType>