_Source/force-app/main/default/objects/Opportunity/recordTypes/BI_Global_Contract.recordType-meta.xml
<RecordType>
    <fullName>BI_Global_Contract</fullName>
    <active>false</active>
    <businessProcess>BI - Corporate Contract</businessProcess>
    <description>Deprecated in BI Release 2019-05/06</description>
    <label>Global Contract</label>
</RecordType>