_Source/force-app/main/default/objects/Opportunity/recordTypes/BI_Tactical_Incentive_Pricing.recordType-meta.xml
<RecordType>
    <fullName>BI_Tactical_Incentive_Pricing</fullName>
    <active>true</active>
    <businessProcess>BI - Tactical Incentive %28Corporate%29</businessProcess>
    <description>Create a Corporate tactical / incentive opportunity</description>
    <label>Tactical Incentive (Corporate)</label>
</RecordType>