_Source/force-app/main/default/objects/Opportunity/recordTypes/BI_TMC_Contract.recordType-meta.xml
<RecordType>
    <fullName>BI_TMC_Contract</fullName>
    <active>true</active>
    <businessProcess>BI - Agency Contract</businessProcess>
    <description>Create an Agency Contract opportunity (Acquisition/Renewal/Amendment)</description>
    <label>Agency Contract</label>
</RecordType>