_Source/force-app/main/default/objects/Opportunity/validationRules/BI_No_Updates_for_Opportunity_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>BI_No_Updates_for_Opportunity_Name</fullName>
    <active>false</active>
    <description>The Opportunity Name can not update once the records is created.</description>
    <errorConditionFormula>NOT(ISNEW())&amp;&amp;  ISCHANGED(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Opportunity Name can not be update.</errorMessage>
</ValidationRule>