_Source/force-app/main/default/objects/Opportunity/validationRules/BI_Prevent_Unauthorized_record_editing.validationRule-meta.xml
<ValidationRule>
    <fullName>BI_Prevent_Unauthorized_record_editing</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Id &lt;&gt; OwnerId &amp;&amp; $Profile.Name &lt;&gt; &apos;BI Managing Director&apos; &amp;&amp; 
$Profile.Name &lt;&gt; &apos;BI Regional Sales Director&apos; &amp;&amp; 
$Profile.Name &lt;&gt; &apos;BI Sales Leadership&apos; &amp;&amp; 
$Profile.Name &lt;&gt; &apos;SIP Admin&apos; &amp;&amp; 
$Profile.Name &lt;&gt; &apos;BI Admin&apos; &amp;&amp;
$Profile.Name &lt;&gt; &apos;Sales Contracts&apos; &amp;&amp;
$Profile.Name &lt;&gt; &apos;System Administrator&apos; &amp;&amp; !ISNEW()
&amp;&amp;
$Profile.Name &lt;&gt; &apos;Corporate&apos; &amp;&amp;
$Profile.Name &lt;&gt; &apos;Meeting&apos;</errorConditionFormula>
    <errorMessage>Insufficient access rights on object id</errorMessage>
</ValidationRule>