_Source/force-app/main/default/objects/Opportunity/validationRules/BI_Tactical_Incentive_Amenity.validationRule-meta.xml
<ValidationRule>
    <fullName>BI_Tactical_Incentive_Amenity</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(
  ISPICKVAL( StageName , &quot;Successful&quot;),
  ISPICKVAL( StageName , &quot;Partially Successful&quot;)), 
  ISBLANK ( BI_Actual_Revenue_UA__c),
  RecordType.DeveloperName = &apos;BI_Tactical_Incentive_Amenity&apos;
)</errorConditionFormula>
    <errorDisplayField>BI_Actual_Revenue_UA__c</errorDisplayField>
    <errorMessage>Before closing this opportunity, use the &apos;Complete / View Financials&apos; button to populate the Actual Revenue from the Amenity Tactical (Actual Sales / Revenue - UA)</errorMessage>
</ValidationRule>