_Source/force-app/main/default/objects/Opportunity/validationRules/Closed_Lost_Unsuccessful_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Lost_Unsuccessful_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IsClosed,ISCHANGED(StageName), ISBLANK ( BI_Closed_Reason__c ))</errorConditionFormula>
    <errorMessage>To Close an Opportunity, click the &apos;Close Opportunity&apos; button (located towards the top right of your opportunity record), update the stage and specify the required closing comments.</errorMessage>
</ValidationRule>