_Source/force-app/main/default/objects/Opportunity/validationRules/TMC_Data_Available_for_Mod.validationRule-meta.xml
<ValidationRule>
    <fullName>TMC_Data_Available_for_Mod</fullName>
    <active>false</active>
    <description>A validation rule that requires the &quot;TMC Data Available&quot; field to be populated if it&apos;s a modeled contract</description>
    <errorConditionFormula>ISPICKVAL( BI_TMC_Data_Available__c   , &quot;No&quot;)</errorConditionFormula>
    <errorDisplayField>BI_TMC_Data_Available__c</errorDisplayField>
    <errorMessage>Please ensure that TMC Information is available for modeled contracts before proceeding</errorMessage>
</ValidationRule>